# NETFLIX-SHOW-RECOMMENDATION

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  generate_coverage.sh
.github/workflows/: tests.yml
benches/: benchmarks.rs
dev-tools/: Cargo.toml
examples/: factorial.rs
src/: add.rs  add_ops.rs  assert.rs  bits.rs  buffer.rs  cmp.rs  convert.rs  div_ops.rs  error.rs  fast_divide.rs  gcd.rs  helper_macros.rs  ibig.rs  lib.rs  macros.rs  math.rs  memory.rs  mul_ops.rs  num_traits.rs  ops.rs  pow.rs  primitive.rs  radix.rs  rand.rs  serde.rs  shift.rs  shift_ops.rs  sign.rs  ubig.rs
src/arch/: mod.rs
src/arch/generic/: add.rs  digits.rs
src/arch/generic_16_bit/: mod.rs  ntt.rs  word.rs
src/arch/generic_32_bit/: mod.rs  ntt.rs  word.rs
src/arch/generic_64_bit/: mod.rs  ntt.rs  word.rs
src/arch/x86/: add.rs  mod.rs
src/arch/x86_64/: add.rs  mod.rs
src/div/: divide_conquer.rs  mod.rs  simple.rs
src/fmt/: digit_writer.rs  mod.rs  non_power_two.rs  power_two.rs
src/modular/: add.rs  cmp.rs  convert.rs  div.rs  fmt.rs  mod.rs  modulo.rs  modulo_ring.rs  mul.rs  pow.rs
src/mul/: helpers.rs  karatsuba.rs  mod.rs  ntt.rs  simple.rs  toom_3.rs
src/parse/: mod.rs  non_power_two.rs  power_two.rs
tests/: add.rs  bits.rs  cmp.rs  convert.rs  div.rs  gcd.rs  hash.rs  modular.rs  mul.rs  pow.rs  radix.rs  random.rs  serde.rs  shift.rs  sign.rs
