[package]
name = "ibig"
version = "0.3.6"
authors = ["Tomek Czajka <tczajka@gmail.com>"]
edition = "2018"
rust-version = "1.49"
description = "A big integer library with good performance"
keywords = ["bigint", "bignum", "mathematics", "modular", "modulo"]
categories = ["mathematics", "no-std"]
license